--- a/Fine_tuning_Mistral_7B_Instruct_for_Summarization_Assignment_Version.ipynb
+++ b/Fine_tuning_Mistral_7B_Instruct_for_Summarization_Assignment_Version.ipynb
@@ -103,21 +103,22 @@
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -rpcio (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -andb (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -afetensors (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -ython-dotenv (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -rpcio (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -andb (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -afetensors (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -ython-dotenv (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -umpy (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -rpcio (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -andb (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
+            "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution -afetensors (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33m    WARNING: Ignoring invalid distribution -ython-dotenv (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33m    WARNING: Ignoring invalid distribution -umpy (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33m    WARNING: Ignoring invalid distribution -rpcio (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m\u001b[33m    WARNING: Ignoring invalid distribution -andb (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[31mERROR: Could not install packages due to an OSError: [Errno 13] Permission denied: 'WHEEL'\n",
-            "Check the permissions.\n",
-            "\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[33m    WARNING: Ignoring invalid distribution -afetensors (/home/amanda.vanderwal/test_venv/lib/python3.10/site-packages)\u001b[0m\u001b[33m\n",
             "\u001b[0m"
           ]
         }
@@ -137,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -173,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "gSXLjUd28II6"
       },
@@ -270,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "pAO9CUR_8bIH"
       },
@@ -295,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -345,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "lZ5IYoVuU9om"
       },
@@ -367,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "MYafv_k-8rvj"
       },
@@ -392,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -440,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -570,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "iSN7Ht0jCbuu"
       },
@@ -606,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -654,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "COu4oraqJwtT"
       },
@@ -665,7 +666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "v6C7BNtWLQa2"
       },
@@ -676,7 +677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "_KsfXGRMLXDd"
       },
@@ -687,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -735,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -811,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "2dNUqlGVCir7"
       },
@@ -852,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -897,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "mERZFXCdFLgI"
       },
@@ -940,7 +941,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -976,7 +977,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1013,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1049,7 +1050,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1101,7 +1102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "jGn--bDL_2S3"
       },
@@ -1136,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "5cpYkvkqAAHw"
       },
@@ -1184,7 +1185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "xJCsUuo18ts0"
       },
@@ -1226,7 +1227,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1254,7 +1255,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1368,7 +1369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "1hZso8c0HH6T"
       },
@@ -1410,7 +1411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "NwyIyTxOHNAN"
       },
@@ -1457,7 +1458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1621,7 +1622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
