--- a/FineTuneMistral.ipynb
+++ b/FineTuneMistral.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -30,7 +30,7 @@
               "True"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 2,
       "metadata": {
         "id": "gSXLjUd28II6"
       },
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 3,
       "metadata": {
         "id": "pAO9CUR_8bIH"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -100,7 +100,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "bbec460b02ac41be9e969d3bfedb1eff",
+              "model_id": "ae5fd6053fe740ca88f1f4e521754d39",
               "version_major": 2,
               "version_minor": 0
             },
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -161,7 +161,7 @@
               ")"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "iSN7Ht0jCbuu"
       },
@@ -205,14 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "COu4oraqJwtT"
       },
@@ -225,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "id": "2dNUqlGVCir7"
       },
@@ -248,18 +241,18 @@
         "  \"\"\"\n",
         "\n",
         "  ### YOUR CODE HERE\n",
-        "  prefix = \"\"\"<s>[INST]Provide a summary of the following text:\\n\\n[INPUT_TEXT_START]\\n\"\"\"\n",
+        "  full_prompt =  f\"<s>[INST]Provide a summary of the following text:\\n\\n[INPUT_TEXT_START]\\n{sample['dialogue']}\\n[INPUT_TEXT_END]\\n\\n[/INST]\\n\"\n",
         "\n",
-        "  suffix = \"\"\"\\n[INPUT_TEXT_END]\\n\\n[/INST]\\n\"\"\"\n",
         "\n",
-        "  full_prompt = prefix + sample['dialogue'] + suffix + sample['summary'] + '</s>\\n'\n",
+        "  if include_response:\n",
+        "    full_prompt += sample['summary'] + '\\n\\n'\n",
         "\n",
         "  return full_prompt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -294,7 +287,8 @@
             "[INPUT_TEXT_END]\n",
             "\n",
             "[/INST]\n",
-            "Eric and Rob are going to watch a stand-up on youtube.</s>\n",
+            "Eric and Rob are going to watch a stand-up on youtube.\n",
+            "\n",
             "\n"
           ]
         }
@@ -305,7 +299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {
         "id": "mERZFXCdFLgI"
       },
@@ -348,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -361,10 +355,10 @@
         {
           "data": {
             "text/plain": [
-              "'\\nEric and Rob are going to watch a stand-up on youtube.</s> \\nEric is excited about one particular stand-up comedian named \"Machine,\" who makes jokes about Americans and Russians.\\nRob shares Eric\\'s excitement and finds that there are actually several of Machine\\'s stand-up performances on youtube.\\nThey both decide to watch them and sign off for now with \"TYTL\" (talk to you later).</s>'"
+              "'\\nEric and Rob are having a conversation about a stand-up comedy performance by an unnamed comedian whose routine includes interacting with a machine. They both find the routine amusing, with Eric particularly enjoying the train part. They discuss how the comedian speaks to the machine in the performance and speculate that it might be his only stand-up. However, they later discover that there are other stand-up routines of his available on YouTube and decide to watch them. They sign off with the phrase \"TTYL\" (talk to you later) before ending the conversation.</s>'"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -377,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -393,7 +387,7 @@
               "'Eric and Rob are going to watch a stand-up on youtube.'"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -414,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -427,10 +421,10 @@
         {
           "data": {
             "text/plain": [
-              "\"\\nEmma will be home soon and she will let Will know.</s> \\nShe doesn't want him to worry about cooking dinner and mentions that she's not feeling well but doesn't want Will to fuss over her. She also declines his offer for him to pick her up.</s>\""
+              "\"\\nWill asked Emma what she wanted for dinner, to which she responded that she wasn't hungry and didn't want him to worry about cooking. She mentioned that things weren't going well, but didn't want Will to be concerned. Emma assured him she would be home soon and would let him know when she got there. Will expressed his love for her and she returned the sentiment.</s>\""
             ]
           },
-          "execution_count": 12,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -443,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -459,7 +453,7 @@
               "'Emma will be home soon and she will let Will know.'"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -471,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 20,
       "metadata": {
         "id": "jGn--bDL_2S3"
       },
@@ -484,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 21,
       "metadata": {
         "id": "5cpYkvkqAAHw"
       },
@@ -507,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 22,
       "metadata": {
         "id": "xJCsUuo18ts0"
       },
@@ -536,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -564,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -628,7 +622,7 @@
               ")"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -652,7 +646,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 25,
       "metadata": {
         "id": "1hZso8c0HH6T"
       },
@@ -694,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 26,
       "metadata": {
         "id": "NwyIyTxOHNAN"
       },
@@ -710,7 +704,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "80552684e02b4004ae2a29be652731e2",
+              "model_id": "0b230946404446629859c6088e0034d2",
               "version_major": 2,
               "version_minor": 0
             },
@@ -724,7 +718,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "652568ee38694936a2175657c62f29bc",
+              "model_id": "e283b7b43dda44f6b13bb8a9f1cbcdbf",
               "version_major": 2,
               "version_minor": 0
             },
@@ -766,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -799,7 +793,7 @@
         {
           "data": {
             "text/html": [
-              "Run data is saved locally in <code>/home/amanda.vanderwal/repos/makerspace/fine_tuning_mistral/wandb/run-20240304_191650-jij6ooxk</code>"
+              "Run data is saved locally in <code>/home/amanda.vanderwal/repos/makerspace/fine_tuning_mistral/wandb/run-20240305_143808-8ycv2o8l</code>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -811,7 +805,7 @@
         {
           "data": {
             "text/html": [
-              "Syncing run <strong><a href='https://wandb.ai/amandajovanderwal/huggingface/runs/jij6ooxk' target=\"_blank\">genial-smoke-4</a></strong> to <a href='https://wandb.ai/amandajovanderwal/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+              "Syncing run <strong><a href='https://wandb.ai/amandajovanderwal/huggingface/runs/8ycv2o8l' target=\"_blank\">grateful-mountain-7</a></strong> to <a href='https://wandb.ai/amandajovanderwal/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -835,7 +829,7 @@
         {
           "data": {
             "text/html": [
-              " View run at <a href='https://wandb.ai/amandajovanderwal/huggingface/runs/jij6ooxk' target=\"_blank\">https://wandb.ai/amandajovanderwal/huggingface/runs/jij6ooxk</a>"
+              " View run at <a href='https://wandb.ai/amandajovanderwal/huggingface/runs/8ycv2o8l' target=\"_blank\">https://wandb.ai/amandajovanderwal/huggingface/runs/8ycv2o8l</a>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -872,13 +866,13 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>25</td>\n",
-              "      <td>1.664200</td>\n",
-              "      <td>1.555051</td>\n",
+              "      <td>1.730000</td>\n",
+              "      <td>1.549017</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>50</td>\n",
-              "      <td>1.561600</td>\n",
-              "      <td>1.460539</td>\n",
+              "      <td>1.508200</td>\n",
+              "      <td>1.470357</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
@@ -893,10 +887,10 @@
         {
           "data": {
             "text/plain": [
-              "TrainOutput(global_step=50, training_loss=1.7277635765075683, metrics={'train_runtime': 119.5007, 'train_samples_per_second': 0.418, 'train_steps_per_second': 0.418, 'total_flos': 4372977156096000.0, 'train_loss': 1.7277635765075683, 'epoch': 0.43})"
+              "TrainOutput(global_step=50, training_loss=1.6960164833068847, metrics={'train_runtime': 120.2668, 'train_samples_per_second': 0.416, 'train_steps_per_second': 0.416, 'total_flos': 4372977156096000.0, 'train_loss': 1.6960164833068847, 'epoch': 0.43})"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -907,7 +901,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -954,7 +948,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "fd2ab008a14f469ca86a3937eb7ccc8e",
+              "model_id": "a6bc11d611434baeb040b47f70a0d286",
               "version_major": 2,
               "version_minor": 0
             },
@@ -974,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1066,7 +1060,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "7ae323825d134158bf7f143dfcb493ab",
+              "model_id": "e970d58937f848b69b02a12efcfb9b2d",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1080,7 +1074,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e8391809270b4fbf8aaa0a46619deca7",
+              "model_id": "117a944f399447d5b461ff28b3c10826",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1094,12 +1088,12 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f30eae74040045cf9188aae9b28c3c24",
+              "model_id": "cce2695fc19d4b8ba41d5249e536d3b6",
               "version_major": 2,
               "version_minor": 0
             },
             "text/plain": [
-              "events.out.tfevents.1709579807.kneddlald001.2657742.0:   0%|          | 0.00/6.98k [00:00<?, ?B/s]"
+              "events.out.tfevents.1709649484.kneddlald001.2802364.0:   0%|          | 0.00/6.98k [00:00<?, ?B/s]"
             ]
           },
           "metadata": {},
@@ -1108,7 +1102,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "bb6ebbedd4264b4986088cf8aef033bc",
+              "model_id": "b30e82ee463c49c9889db4b04b8f31f2",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1122,10 +1116,10 @@
         {
           "data": {
             "text/plain": [
-              "CommitInfo(commit_url='https://huggingface.co/ajvanderwal/mistral7binstruct_summarize/commit/e6739e97e36afa191c9362c769600464f45ffb34', commit_message='ajvanderwal/mistral-7binstruct-summary-100s', commit_description='', oid='e6739e97e36afa191c9362c769600464f45ffb34', pr_url=None, pr_revision=None, pr_num=None)"
+              "CommitInfo(commit_url='https://huggingface.co/ajvanderwal/mistral7binstruct_summarize/commit/341cf70f72d2958c484f4f8b7335ac47ba53a83b', commit_message='ajvanderwal/mistral-7binstruct-summary-100s', commit_description='', oid='341cf70f72d2958c484f4f8b7335ac47ba53a83b', pr_url=None, pr_revision=None, pr_num=None)"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1147,7 +1141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1186,7 +1180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1199,10 +1193,10 @@
         {
           "data": {
             "text/plain": [
-              "'\\nEric and Rob are going to watch a stand-up on youtube.</s> \\n</s>'"
+              "'\\nEric and Rob are chatting about a video of \"MACHINE!\" - an American comedian stand up show where he speaks sarcastically to a Russian machine interpreter. Eric likes the train part. He is wondering whether Machine has other stand-ups. Rob checks and discovers they are available on YouTube.\\n\\n</s>'"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1242,7 +1236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1274,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 37,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1287,10 +1281,10 @@
         {
           "data": {
             "text/plain": [
-              "'\\nEmma will be home soon and she will let Will know.</s> \\n</s>'"
+              "\"\\nEmma wants to go home soon, everything is not exactly fine with her but she doesn't want Will to worry, and doesn't need him to cook for her.\\n\\n</s>\""
             ]
           },
-          "execution_count": 27,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1303,7 +1297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1319,7 +1313,7 @@
               "'Emma will be home soon and she will let Will know.'"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1345,6 +1339,11 @@
         "\n",
         "And again, we can see that the model performs the task *better* than the original un-fine-tuned model - though there is still work to do."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
